Fix overflowing using flex

--- a/src/Grid.css
+++ b/src/Grid.css
@@ -72,6 +72,7 @@ object {
     left: 0;
     right: 0;
     bottom: 0;
+    display: flex;
   }
   .booklist-book .cover {
     /* display: flex; */
@@ -81,6 +82,8 @@ object {
   
   .product-image {
     /* display: block; */
+    display: flex;
+    flex: 1;
     border-radius: 4px;
     position: relative;
     box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3);
